// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-runner-prettier JSON bad fixture matches snapshot 1`] = `
Object {
  "console": null,
  "failureMessage": "[32m- Expected[39m
[31m+ Received[39m

[32m- {[39m
[32m-   [36m\\"ohMyGodLongArray\\"[39m[32m: [[39m
[32m-     [31m\\"prettyLongValue\\"[39m[32m,[39m
[32m-     [31m\\"decentlyLongValue\\"[39m[32m,[39m
[32m-     [31m\\"prettyDecentlyLongValue\\"[39m[32m,[39m
[32m-     [31m\\"wowWowWowWhatALongValue\\"[39m[32m[39m
[32m-   ],[39m
[32m-   [36m\\"woahThisObjectIsDisapperingOffTheScreen\\"[39m[32m: {[39m
[32m-     [36m\\"foo\\"[39m[32m: [31m\\"bar\\"[39m[32m,[39m
[32m-     [36m\\"bar\\"[39m[32m: [31m\\"foo\\"[39m[32m,[39m
[32m-     [36m\\"faz\\"[39m[32m: [34mfalse[39m[32m[39m
[32m-   },[39m
[32m-   [36m\\"truthy\\"[39m[32m: [34mtrue[39m[32m,[39m
[32m-   [36m\\"aNumber\\"[39m[32m: [32m123[39m[32m,[39m
[32m-   [36m\\"aString\\"[39m[32m: [31m\\"hi\\"[39m[32m[39m
[32m- }[39m
[32m-[39m
[31m+ {[36m\\"ohMyGodLongArray\\"[39m[31m: [[31m\\"prettyLongValue\\"[39m[31m, [31m\\"decentlyLongValue\\"[39m[31m,[39m
[31m+   [31m\\"prettyDecentlyLongValue\\"[39m[31m, [31m\\"wowWowWowWhatALongValue\\"[39m[31m], [36m\\"woahThisObjectIsDisapperingOffTheScreen\\"[39m[31m: {[36m\\"foo\\"[39m[31m: [31m\\"bar\\"[39m[31m,[39m
[31m+     [36m\\"bar\\"[39m[31m: [31m\\"foo\\"[39m[31m, [36m\\"faz\\"[39m[31m: [34mfalse[39m[31m}, [36m\\"truthy\\"[39m[31m: [34mtrue[39m[31m, [36m\\"aNumber\\"[39m[31m: [32m123[39m[31m, [36m\\"aString\\"[39m[31m: [31m\\"hi\\"[39m[31m[39m
[31m+   }[39m",
  "numFailingTests": 1,
  "numPassingTests": 0,
  "numPendingTests": 0,
  "numTodoTests": 0,
  "skipped": undefined,
  "snapshot": Object {
    "added": 0,
    "fileDeleted": false,
    "matched": 0,
    "unchecked": 0,
    "unmatched": 0,
    "updated": 0,
  },
  "sourceMaps": Object {},
  "testExecError": null,
  "testResults": Array [
    Object {
      "ancestorTitles": Array [],
      "failureMessages": Array [
        "[32m- Expected[39m
[31m+ Received[39m

[32m- {[39m
[32m-   [36m\\"ohMyGodLongArray\\"[39m[32m: [[39m
[32m-     [31m\\"prettyLongValue\\"[39m[32m,[39m
[32m-     [31m\\"decentlyLongValue\\"[39m[32m,[39m
[32m-     [31m\\"prettyDecentlyLongValue\\"[39m[32m,[39m
[32m-     [31m\\"wowWowWowWhatALongValue\\"[39m[32m[39m
[32m-   ],[39m
[32m-   [36m\\"woahThisObjectIsDisapperingOffTheScreen\\"[39m[32m: {[39m
[32m-     [36m\\"foo\\"[39m[32m: [31m\\"bar\\"[39m[32m,[39m
[32m-     [36m\\"bar\\"[39m[32m: [31m\\"foo\\"[39m[32m,[39m
[32m-     [36m\\"faz\\"[39m[32m: [34mfalse[39m[32m[39m
[32m-   },[39m
[32m-   [36m\\"truthy\\"[39m[32m: [34mtrue[39m[32m,[39m
[32m-   [36m\\"aNumber\\"[39m[32m: [32m123[39m[32m,[39m
[32m-   [36m\\"aString\\"[39m[32m: [31m\\"hi\\"[39m[32m[39m
[32m- }[39m
[32m-[39m
[31m+ {[36m\\"ohMyGodLongArray\\"[39m[31m: [[31m\\"prettyLongValue\\"[39m[31m, [31m\\"decentlyLongValue\\"[39m[31m,[39m
[31m+   [31m\\"prettyDecentlyLongValue\\"[39m[31m, [31m\\"wowWowWowWhatALongValue\\"[39m[31m], [36m\\"woahThisObjectIsDisapperingOffTheScreen\\"[39m[31m: {[36m\\"foo\\"[39m[31m: [31m\\"bar\\"[39m[31m,[39m
[31m+     [36m\\"bar\\"[39m[31m: [31m\\"foo\\"[39m[31m, [36m\\"faz\\"[39m[31m: [34mfalse[39m[31m}, [36m\\"truthy\\"[39m[31m: [34mtrue[39m[31m, [36m\\"aNumber\\"[39m[31m: [32m123[39m[31m, [36m\\"aString\\"[39m[31m: [31m\\"hi\\"[39m[31m[39m
[31m+   }[39m",
      ],
      "fullName": undefined,
      "numPassingAsserts": 1,
      "status": "failed",
      "title": "",
    },
  ],
}
`;

exports[`jest-runner-prettier JSON good fixture matches snapshot 1`] = `
Object {
  "console": null,
  "failureMessage": undefined,
  "numFailingTests": 0,
  "numPassingTests": 1,
  "numPendingTests": 0,
  "numTodoTests": 0,
  "skipped": undefined,
  "snapshot": Object {
    "added": 0,
    "fileDeleted": false,
    "matched": 0,
    "unchecked": 0,
    "unmatched": 0,
    "updated": 0,
  },
  "sourceMaps": Object {},
  "testExecError": null,
  "testResults": Array [
    Object {
      "ancestorTitles": Array [],
      "failureMessages": Array [
        undefined,
      ],
      "fullName": undefined,
      "numPassingAsserts": 0,
      "status": "passed",
      "title": "",
    },
  ],
}
`;

exports[`jest-runner-prettier JSX bad fixture matches snapshot 1`] = `
Object {
  "console": null,
  "failureMessage": "[32m- Expected[39m
[31m+ Received[39m

[32m- [33m[34mfunction[39m[32m[33m HelloWorld({[39m[32m[39m
[32m- [33m  greeting = [31m\\"hello\\"[39m[32m[33m,[39m[32m[39m
[32m- [33m  greeted = [31m'\\"World\\"'[39m[32m[33m,[39m[32m[39m
[32m- [33m  silent = [34mfalse[39m[32m[33m,[39m[32m[39m
[32m- [33m  onMouseOver,[39m[32m[39m
[32m- [33m}) [39m[32m{[39m
[32m-   [34mif[39m[32m (!greeting) {[39m
[32m-     [34mreturn[39m[32m [34mnull[39m[32m;[39m
[32m-   }[39m
[31m+ [33m[34mfunction[39m[31m[33m HelloWorld({greeting = [31m\\"hello\\"[39m[31m[33m, greeted = [31m'\\"World\\"'[39m[31m[33m, silent = [34mfalse[39m[31m[33m, onMouseOver,}) [39m[31m{[39m
[31m+[39m
[31m+   [34mif[39m[31m(!greeting){[34mreturn[39m[31m [34mnull[39m[31m};[39m
[31m+[39m
[31m+      [32m// [32mTODO:[39m[31m[32m Don't use random in render[39m[31m[39m
[31m+   [34mlet[39m[31m num = [36mMath[39m[31m.floor ([36mMath[39m[31m.random() * [32m1E+7[39m[31m).toString().replace([31m/\\\\.\\\\d+/ig[39m[31m, [31m\\"\\"[39m[31m)[39m
[31m+[39m
[31m+   [34mreturn[39m[31m [90m<[34mdiv[39m[31m[90m [36mclassName[39m[31m[90m=[31m'HelloWorld'[39m[31m[90m [36mtitle[39m[31m[90m=[31m{[39m[31m[90m\`[36mYou[39m[31m[90m [36mare[39m[31m[90m [36mvisitor[39m[31m[90m [36mnumber[39m[31m[90m \${ [36mnum[39m[31m[90m }\`} [36monMouseOver[39m[31m[90m=[31m{onMouseOver}[39m[31m[90m>[39m[31m[39m
[31m+[39m
[31m+     [90m<[34mstrong[39m[31m[90m>[39m[31m{ greeting.slice( 0, 1 ).toUpperCase() + greeting.slice(1).toLowerCase() }[90m</[34mstrong[39m[31m[90m>[39m[31m[39m
[31m+     {greeting.endsWith(\\",\\") ? \\" \\" : [90m<[34mspan[39m[31m[90m [36mstyle[39m[31m[90m=[31m{{color:[39m[31m[90m '\\\\[36mgrey[39m[31m[90m'}}>[39m[31m\\", \\"[90m</[34mspan[39m[31m[90m>[39m[31m }[39m
[31m+     [90m<[34mem[39m[31m[90m>[39m[31m[39m
[31m+ 	{ greeted }[39m
[31m+ 	[90m</[34mem[39m[31m[90m>[39m[31m[39m
[31m+     { (silent)[39m
[31m+       ? \\".\\"[39m
[31m+       : \\"!\\"}[39m

[32m-   [32m// [32mTODO:[39m[32m[32m Don't use random in render[39m[32m[39m
[32m-   [34mlet[39m[32m num = [36mMath[39m[32m.floor([36mMath[39m[32m.random() * [32m1e7[39m[32m)[39m
[32m-     .toString()[39m
[32m-     .replace([31m/\\\\.\\\\d+/gi[39m[32m, [31m\\"\\"[39m[32m);[39m
[31m+     [90m</[34mdiv[39m[31m[90m>[39m[31m;[39m

[32m-   [34mreturn[39m[32m ([39m
[32m-     [90m<[34mdiv[39m[32m[90m[39m[32m[39m
[32m- [90m      [36mclassName[39m[32m[90m=[31m\\"HelloWorld\\"[39m[32m[90m[39m[32m[39m
[32m- [90m      [36mtitle[39m[32m[90m=[31m{[39m[32m[90m\`[36mYou[39m[32m[90m [36mare[39m[32m[90m [36mvisitor[39m[32m[90m [36mnumber[39m[32m[90m \${[36mnum[39m[32m[90m}\`}[39m[32m[39m
[32m- [90m      [36monMouseOver[39m[32m[90m=[31m{onMouseOver}[39m[32m[90m[39m[32m[39m
[32m- [90m    >[39m[32m[39m
[32m-       [90m<[34mstrong[39m[32m[90m>[39m[32m[39m
[32m-         {greeting.slice(0, 1).toUpperCase() + greeting.slice(1).toLowerCase()}[39m
[32m-       [90m</[34mstrong[39m[32m[90m>[39m[32m[39m
[32m-       {greeting.endsWith(\\",\\") ? ([39m
[32m-         \\" \\"[39m
[32m-       ) : ([39m
[32m-         [90m<[34mspan[39m[32m[90m [36mstyle[39m[32m[90m=[31m{{[39m[32m[90m [36mcolor:[39m[32m[90m \\"[36mgrey[39m[32m[90m\\" }}>[39m[32m\\", \\"[90m</[34mspan[39m[32m[90m>[39m[32m[39m
[32m-       )}[39m
[32m-       [90m<[34mem[39m[32m[90m>[39m[32m{greeted}[90m</[34mem[39m[32m[90m>[39m[32m[39m
[32m-       {silent ? \\".\\" : \\"!\\"}[39m
[32m-     [90m</[34mdiv[39m[32m[90m>[39m[32m[39m
[32m-   );[39m
[2m  }[22m
[32m-[39m",
  "numFailingTests": 1,
  "numPassingTests": 0,
  "numPendingTests": 0,
  "numTodoTests": 0,
  "skipped": undefined,
  "snapshot": Object {
    "added": 0,
    "fileDeleted": false,
    "matched": 0,
    "unchecked": 0,
    "unmatched": 0,
    "updated": 0,
  },
  "sourceMaps": Object {},
  "testExecError": null,
  "testResults": Array [
    Object {
      "ancestorTitles": Array [],
      "failureMessages": Array [
        "[32m- Expected[39m
[31m+ Received[39m

[32m- [33m[34mfunction[39m[32m[33m HelloWorld({[39m[32m[39m
[32m- [33m  greeting = [31m\\"hello\\"[39m[32m[33m,[39m[32m[39m
[32m- [33m  greeted = [31m'\\"World\\"'[39m[32m[33m,[39m[32m[39m
[32m- [33m  silent = [34mfalse[39m[32m[33m,[39m[32m[39m
[32m- [33m  onMouseOver,[39m[32m[39m
[32m- [33m}) [39m[32m{[39m
[32m-   [34mif[39m[32m (!greeting) {[39m
[32m-     [34mreturn[39m[32m [34mnull[39m[32m;[39m
[32m-   }[39m
[31m+ [33m[34mfunction[39m[31m[33m HelloWorld({greeting = [31m\\"hello\\"[39m[31m[33m, greeted = [31m'\\"World\\"'[39m[31m[33m, silent = [34mfalse[39m[31m[33m, onMouseOver,}) [39m[31m{[39m
[31m+[39m
[31m+   [34mif[39m[31m(!greeting){[34mreturn[39m[31m [34mnull[39m[31m};[39m
[31m+[39m
[31m+      [32m// [32mTODO:[39m[31m[32m Don't use random in render[39m[31m[39m
[31m+   [34mlet[39m[31m num = [36mMath[39m[31m.floor ([36mMath[39m[31m.random() * [32m1E+7[39m[31m).toString().replace([31m/\\\\.\\\\d+/ig[39m[31m, [31m\\"\\"[39m[31m)[39m
[31m+[39m
[31m+   [34mreturn[39m[31m [90m<[34mdiv[39m[31m[90m [36mclassName[39m[31m[90m=[31m'HelloWorld'[39m[31m[90m [36mtitle[39m[31m[90m=[31m{[39m[31m[90m\`[36mYou[39m[31m[90m [36mare[39m[31m[90m [36mvisitor[39m[31m[90m [36mnumber[39m[31m[90m \${ [36mnum[39m[31m[90m }\`} [36monMouseOver[39m[31m[90m=[31m{onMouseOver}[39m[31m[90m>[39m[31m[39m
[31m+[39m
[31m+     [90m<[34mstrong[39m[31m[90m>[39m[31m{ greeting.slice( 0, 1 ).toUpperCase() + greeting.slice(1).toLowerCase() }[90m</[34mstrong[39m[31m[90m>[39m[31m[39m
[31m+     {greeting.endsWith(\\",\\") ? \\" \\" : [90m<[34mspan[39m[31m[90m [36mstyle[39m[31m[90m=[31m{{color:[39m[31m[90m '\\\\[36mgrey[39m[31m[90m'}}>[39m[31m\\", \\"[90m</[34mspan[39m[31m[90m>[39m[31m }[39m
[31m+     [90m<[34mem[39m[31m[90m>[39m[31m[39m
[31m+ 	{ greeted }[39m
[31m+ 	[90m</[34mem[39m[31m[90m>[39m[31m[39m
[31m+     { (silent)[39m
[31m+       ? \\".\\"[39m
[31m+       : \\"!\\"}[39m

[32m-   [32m// [32mTODO:[39m[32m[32m Don't use random in render[39m[32m[39m
[32m-   [34mlet[39m[32m num = [36mMath[39m[32m.floor([36mMath[39m[32m.random() * [32m1e7[39m[32m)[39m
[32m-     .toString()[39m
[32m-     .replace([31m/\\\\.\\\\d+/gi[39m[32m, [31m\\"\\"[39m[32m);[39m
[31m+     [90m</[34mdiv[39m[31m[90m>[39m[31m;[39m

[32m-   [34mreturn[39m[32m ([39m
[32m-     [90m<[34mdiv[39m[32m[90m[39m[32m[39m
[32m- [90m      [36mclassName[39m[32m[90m=[31m\\"HelloWorld\\"[39m[32m[90m[39m[32m[39m
[32m- [90m      [36mtitle[39m[32m[90m=[31m{[39m[32m[90m\`[36mYou[39m[32m[90m [36mare[39m[32m[90m [36mvisitor[39m[32m[90m [36mnumber[39m[32m[90m \${[36mnum[39m[32m[90m}\`}[39m[32m[39m
[32m- [90m      [36monMouseOver[39m[32m[90m=[31m{onMouseOver}[39m[32m[90m[39m[32m[39m
[32m- [90m    >[39m[32m[39m
[32m-       [90m<[34mstrong[39m[32m[90m>[39m[32m[39m
[32m-         {greeting.slice(0, 1).toUpperCase() + greeting.slice(1).toLowerCase()}[39m
[32m-       [90m</[34mstrong[39m[32m[90m>[39m[32m[39m
[32m-       {greeting.endsWith(\\",\\") ? ([39m
[32m-         \\" \\"[39m
[32m-       ) : ([39m
[32m-         [90m<[34mspan[39m[32m[90m [36mstyle[39m[32m[90m=[31m{{[39m[32m[90m [36mcolor:[39m[32m[90m \\"[36mgrey[39m[32m[90m\\" }}>[39m[32m\\", \\"[90m</[34mspan[39m[32m[90m>[39m[32m[39m
[32m-       )}[39m
[32m-       [90m<[34mem[39m[32m[90m>[39m[32m{greeted}[90m</[34mem[39m[32m[90m>[39m[32m[39m
[32m-       {silent ? \\".\\" : \\"!\\"}[39m
[32m-     [90m</[34mdiv[39m[32m[90m>[39m[32m[39m
[32m-   );[39m
[2m  }[22m
[32m-[39m",
      ],
      "fullName": undefined,
      "numPassingAsserts": 1,
      "status": "failed",
      "title": "",
    },
  ],
}
`;

exports[`jest-runner-prettier JSX good fixture matches snapshot 1`] = `
Object {
  "console": null,
  "failureMessage": undefined,
  "numFailingTests": 0,
  "numPassingTests": 1,
  "numPendingTests": 0,
  "numTodoTests": 0,
  "skipped": undefined,
  "snapshot": Object {
    "added": 0,
    "fileDeleted": false,
    "matched": 0,
    "unchecked": 0,
    "unmatched": 0,
    "updated": 0,
  },
  "sourceMaps": Object {},
  "testExecError": null,
  "testResults": Array [
    Object {
      "ancestorTitles": Array [],
      "failureMessages": Array [
        undefined,
      ],
      "fullName": undefined,
      "numPassingAsserts": 0,
      "status": "passed",
      "title": "",
    },
  ],
}
`;
